--- a/reserve.html
+++ b/reserve.html
@@ -1,3 +1,16 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Tables Page</title>
+
+  <!-- Latest compiled and minified CSS & JS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+
+</head>
+<body>
 <div class="container">
 
     <div class="jumbotron">
@@ -54,3 +67,28 @@
     </div>
 
   </div>
+
+  <script type="text/javascript">
+    $(".submit").on("click", function() {
+      event.preventDefault();
+      var newrezzie = {
+
+        name: $("#reserve_name").val().trim(),
+        email: $("#reserve_email").val().trim(),
+        phone: $("#reserve_email").val().trim(),
+        ID: $("#reserve_uniqueID").val().trim()
+
+      };
+
+      $.post("/api/new", newrezzie)
+      .done(function(data) {
+
+        console.log(data);
+        alert("Your reservation has been made!");
+
+      });
+
+    });
+  </script>
+</body>
+</html>
